<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="am_str">AM</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer">Answer</string>
    <string name="app_demo_version">该应用为工程版本</string>
    <string name="app_name">component</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="bt_not_connect">Bluetooth not connected</string>
    <string name="btn_bt_connect">Connect Bluetooth</string>
    <string name="btn_bt_phone">Bluetooth Phone</string>
    <string name="btn_online">Online</string>
    <string name="btn_online_phone">Online Phone</string>
    <string name="call_state_call_active">Call Active</string>
    <string name="call_state_call_ended">Call Ended</string>
    <string name="call_state_call_ending">Disconnecting</string>
    <string name="call_state_call_ringing">Incoming Call Ringing</string>
    <string name="call_state_connecting">Connecting</string>
    <string name="call_state_dialing">Dialing</string>
    <string name="call_state_hold">Call on Hold</string>
    <string name="calling_now">Calling...</string>
    <string name="calllog_all">All Calls</string>
    <string name="calllog_missed">Missed Calls</string>
    <string name="can_not_call_again_when_calling">Currently calling, cannot make another call</string>
    <string name="can_not_call_your_number">Cannot call your own number</string>
    <string name="can_not_make_call">Cannot make a call</string>
    <string name="can_not_make_call_no_hfp">Bluetooth not connected, cannot make a call</string>
    <string name="can_not_make_more_call">Cannot make more calls</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_favorites">Cancel favorites</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_fav">Clear Favorites</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_drawer">Close navigation menu</string>
    <string name="close_sheet">Close sheet</string>
    <string name="company">Company</string>
    <string name="complete_vehicle">Complete Vehicle</string>
    <string name="conference_call">Conference Call</string>
    <string name="connect">Connect</string>
    <string name="connect_bluetooth_before_call">Please connect Bluetooth before making a call</string>
    <string name="contact_address_label">Address</string>
    <string name="contact_email_label">Email</string>
    <string name="contact_phone_label">Phone</string>
    <string name="contacts">Contacts</string>
    <string name="contacts_are_not_synchronized">Contacts not synchronized</string>
    <string name="contacts_more">Too many contacts, unable to download completely</string>
    <string name="contacts_sync_complete">Sync successful</string>
    <string name="contacts_sync_fail">Sync failed, please check if contact sync permission is enabled on your phone</string>
    <string name="contacts_sync_no_support">Phone does not support contact sync feature</string>
    <string name="contacts_unable_sync">Unable to sync</string>
    <string name="customization">Customization</string>
    <string name="default_error_message">Invalid input</string>
    <string name="delete">Delete</string>
    <string name="delete_all_favorite">All favorites cleared</string>
    <string name="delete_all_favorites_fail">Failed to delete all favorites</string>
    <string name="delete_favorite">Favorite deleted</string>
    <string name="delete_personal_favorite">Delete favorite</string>
    <string name="dial_fail">Call failed</string>
    <string name="dial_pad">Dial pad</string>
    <string name="dialing_call">Dialing...</string>
    <string name="eight">8</string>
    <string name="eight_letters">TUV</string>
    <string name="enter_again">您输入的号码有误，请重新输入</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="favorites_show_more_than">You can save up to 100 contacts</string>
    <string name="fax_home">Home Fax</string>
    <string name="fax_work">Work Fax</string>
    <string name="five">5</string>
    <string name="five_letters">JKL</string>
    <string name="four">4</string>
    <string name="four_letters">GHI</string>
    <string name="front_passenger_headrest">Front Passenger Headrest</string>
    <string name="go_to_connect">Go to Connect</string>
    <string name="hang_up">Hang Up</string>
    <string name="hang_up_answer">Hang Up and Answer</string>
    <string name="hide">Hide</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hold_answer">Hold and Answer</string>
    <string name="holding">On Hold</string>
    <string name="home">Home</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="in_progress">In progress</string>
    <string name="incoming_call">来电中</string>
    <string name="indeterminate">Neither checked nor unchecked</string>
    <string name="item_view_role_description">Tab</string>
    <string name="just_now">刚刚</string>
    <string name="m3_sys_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="m3_sys_motion_easing_emphasized_accelerate">cubic-bezier(0.3, 0.0, 0.8, 0.2)</string>
    <string name="m3_sys_motion_easing_emphasized_decelerate">cubic-bezier(0.1, 0.7, 0.1, 1.0)</string>
    <string name="m3_sys_motion_easing_emphasized_path_data">M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1</string>
    <string name="m3_sys_motion_easing_legacy">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_accelerate">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_legacy_decelerate">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="m3_sys_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard">cubic-bezier(0.2, 0.0, 0.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_accelerate">cubic-bezier(0.3, 0.0, 1.0, 1.0)</string>
    <string name="m3_sys_motion_easing_standard_decelerate">cubic-bezier(0.0, 0.0, 0.0, 1.0)</string>
    <string name="main_contacts">Contacts</string>
    <string name="main_dial">Dial Pad</string>
    <string name="main_driver_headrest">Driver Headrest</string>
    <string name="main_favorites">Favorites</string>
    <string name="main_recent">Recent Calls</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_24h_suffix">%1$s hours</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">"%1$s o\'clock"</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_motion_easing_accelerated">cubic-bezier(0.4, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_decelerated">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="material_motion_easing_emphasized">path(M 0,0 C 0.05, 0, 0.133333, 0.06, 0.166666, 0.4 C 0.208333, 0.82, 0.25, 1, 1, 1)</string>
    <string name="material_motion_easing_linear">cubic-bezier(0.0, 0.0, 1.0, 1.0)</string>
    <string name="material_motion_easing_standard">cubic-bezier(0.4, 0.0, 0.2, 1.0)</string>
    <string name="material_slider_range_end">Range end</string>
    <string name="material_slider_range_start">Range start</string>
    <string name="material_slider_value">Value</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="mobile_phone">mobile phone</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_checkbox_button_icon_path_checked">M14,18.2 11.4,15.6 10,17 14,21 22,13 20.6,11.6z</string>
    <string name="mtrl_checkbox_button_icon_path_group_name">icon</string>
    <string name="mtrl_checkbox_button_icon_path_indeterminate">M13.4,15 11,15 11,17 13.4,17 21,17 21,15z</string>
    <string name="search_contact">Search Contact</string>
    <string name="search_count">Found %1$d Contacts</string>
    <string name="search_empty">No Contacts Found</string>
</resources>