<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/ll_main_activity_bg" android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.ecarx.btphone.view.LineView android:visibility="gone" android:layout_width="@dimen/width2" android:layout_height="@dimen/width860" android:layout_marginStart="@dimen/width177" />
        <TextView android:textSize="@dimen/text_size_28" android:textColor="@color/missed_calls_text_color" android:gravity="center" android:id="@id/tv_missed_calls" android:background="@drawable/shape_missed_calls_number_background" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="@dimen/width32" android:layout_marginLeft="1240.0dip" android:layout_marginTop="63.0dip" android:minWidth="@dimen/width32" android:includeFontPadding="false" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:paddingStart="@dimen/width8" android:paddingEnd="@dimen/width8" android:textFontWeight="400" style="@android:style/Widget.CompoundButton.RadioButton" />
        <com.ecarx.btphone.view.navbar.XCViewPager android:id="@id/view_pager" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:overScrollMode="never" android:layout_toEndOf="@id/dialer_fragment_container" />
        <RadioGroup android:orientation="horizontal" android:id="@id/navigation_bar" android:visibility="visible" android:clickable="false" android:layout_width="wrap_content" android:layout_height="@dimen/nav_bar_height" android:layout_marginTop="@dimen/width57" android:layout_marginStart="1046.0dip">
            <RadioButton android:textSize="@dimen/text_size_40" android:textColor="@drawable/select_tab_bg" android:gravity="center" android:id="@id/rb_recent" android:background="@drawable/tab_radio_button_slide_bg" android:layout_width="wrap_content" android:layout_height="fill_parent" android:checked="true" android:button="@null" android:text="@string/main_recent" android:paddingStart="@dimen/width34" android:paddingEnd="@dimen/width34" />
            <RadioButton android:textSize="@dimen/text_size_40" android:textColor="@drawable/select_tab_bg" android:gravity="center" android:id="@id/rb_favorites" android:background="@drawable/tab_radio_button_slide_bg" android:layout_width="wrap_content" android:layout_height="fill_parent" android:button="@null" android:text="@string/main_favorites" android:paddingStart="@dimen/width34" android:paddingEnd="@dimen/width34" android:layout_marginStart="@dimen/width4" android:layout_marginEnd="@dimen/width4" />
            <RadioButton android:textSize="@dimen/text_size_40" android:textColor="@drawable/select_tab_bg" android:gravity="center" android:id="@id/rb_contacts" android:background="@drawable/tab_radio_button_slide_bg" android:layout_width="wrap_content" android:layout_height="fill_parent" android:button="@null" android:text="@string/main_contacts" android:paddingStart="@dimen/width34" android:paddingEnd="@dimen/width34" />
            <RadioButton android:textSize="@dimen/text_size_28" android:textColor="@drawable/select_tab_bg" android:gravity="center" android:id="@id/rb_dial" android:background="@drawable/tab_radio_button_slide_bg" android:visibility="gone" android:layout_width="@dimen/width120" android:layout_height="fill_parent" android:button="@null" android:text="@string/main_dial" />
        </RadioGroup>
        <fragment android:name="com.ecarx.btphone.ui.dialer.DialerFragment" android:id="@id/dialer_fragment_container" android:layout_width="wrap_content" android:layout_height="fill_parent" />
        <com.ecarx.btphone.ui.contacts.NavView android:id="@id/nv_index_contact_list" android:visibility="gone" android:layout_width="@dimen/width80" android:layout_height="1134.0dip" android:layout_marginTop="@dimen/width200" android:layout_marginStart="987.0dip" />
        <RelativeLayout android:id="@id/rl_root_search" android:background="@drawable/ll_main_activity_bg" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/tv_cancel_search" android:layout_width="@dimen/width96" android:layout_height="@dimen/width96" android:layout_marginTop="@dimen/width54" android:src="@drawable/ic_search_contacts_back" android:scaleType="centerInside" android:layout_marginStart="@dimen/width40" />
            <RelativeLayout android:id="@id/rl_edit_search" android:background="@drawable/search_edit_bg" android:layout_width="2296.0dip" android:layout_height="@dimen/width86" android:layout_marginTop="@dimen/width58" android:layout_toRightOf="@id/tv_cancel_search">
                <ImageView android:id="@id/iv_img_search" android:layout_width="@dimen/width40" android:layout_height="@dimen/width40" android:src="@drawable/ic_img_search" android:scaleType="centerInside" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:layout_marginStart="@dimen/width24" />
                <EditText android:textSize="@dimen/text_size_32" android:textColor="@color/contact_search_edit_text_color" android:textColorHint="@color/contact_search_edit_hint_text_color" android:gravity="center_vertical" android:id="@id/et_search" android:background="@null" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/search_contact" android:singleLine="true" android:includeFontPadding="false" android:layout_toLeftOf="@id/iv_img_clean_search" android:layout_toRightOf="@id/iv_img_search" android:textAllCaps="false" android:layout_marginStart="@dimen/width24" android:layout_marginEnd="@dimen/width109" />
            </RelativeLayout>
            <RelativeLayout android:id="@id/iv_img_clean_search" android:background="@null" android:visibility="gone" android:layout_width="@dimen/width200" android:layout_height="@dimen/width200" android:layout_alignParentRight="true" android:layout_marginEnd="@dimen/width20">
                <ImageView android:background="@null" android:layout_width="@dimen/width64" android:layout_height="@dimen/width64" android:layout_marginTop="71.0dip" android:src="@drawable/ic_search_delete" android:scaleType="centerInside" android:layout_marginStart="@dimen/width12" />
            </RelativeLayout>
            <TextView android:textSize="@dimen/text_size_32" android:textColor="@color/edit_search_count_text_color" android:id="@id/tv_count_search" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/width12" android:text="@string/search_count" android:layout_below="@id/rl_edit_search" android:layout_alignStart="@id/rl_edit_search" />
            <com.zeekr.component.rebound.ZeekrReboundRefreshLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/width48" android:layout_below="@id/tv_count_search" android:layout_alignStart="@id/rl_edit_search">
                <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_search" android:scrollbars="none" android:layout_width="2296.0dip" android:layout_height="fill_parent" />
            </com.zeekr.component.rebound.ZeekrReboundRefreshLayout>
            <TextView android:textSize="@dimen/text_size_36" android:textColor="@color/bt_list_empty_text_color" android:gravity="center_horizontal" android:id="@id/tv_empty_search" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="479.0dip" android:text="@string/search_empty" android:drawableTop="@drawable/ic_bt_no_match_contacts" android:drawablePadding="@dimen/width40" android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>